[gd_scene load_steps=4 format=3 uid="uid://bhmxe7eqqmqje"]

[ext_resource type="Script" uid="uid://n1ny7t4lbdra" path="res://UI/Script/in_game_menu.gd" id="1_860qj"]
[ext_resource type="Theme" uid="uid://bd8bwini8iq2i" path="res://Assets/UI/Options/options.tres" id="2_860qj"]
[ext_resource type="Texture2D" uid="uid://cptfdrv2anvtj" path="res://Assets/UI/InGameUI/pause.png" id="2_wcqru"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_860qj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 54
theme_override_constants/margin_top = 52
theme_override_constants/margin_right = 54
theme_override_constants/margin_bottom = 52

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_wcqru")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 133
theme_override_constants/margin_right = 92
theme_override_constants/margin_bottom = 133

[node name="main menu" type="Button" parent="MarginContainer/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme = ExtResource("2_860qj")
theme_override_font_sizes/font_size = 87
text = "Main Menu"

[node name="Back" type="Button" parent="MarginContainer/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("2_860qj")
theme_override_font_sizes/font_size = 87
text = "back"

[node name="Confirm_Panel" type="Panel" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Confirm_Panel"]
layout_mode = 2
offset_right = 1812.0
offset_bottom = 976.0
theme_override_constants/margin_top = 275
theme_override_constants/margin_bottom = 320

[node name="Label" type="Label" parent="MarginContainer/Confirm_Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_860qj")
theme_override_font_sizes/font_size = 61
text = "Leave now? Your progress wonâ€™t be saved."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Confirm_Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 160

[node name="Yes" type="Button" parent="MarginContainer/Confirm_Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_860qj")
theme_override_font_sizes/font_size = 52
text = "Yes"

[node name="No" type="Button" parent="MarginContainer/Confirm_Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_860qj")
theme_override_font_sizes/font_size = 52
text = "No
"

[connection signal="button_up" from="MarginContainer/TextureRect/MarginContainer/main menu" to="." method="_on_main_menu_button_up"]
[connection signal="button_up" from="MarginContainer/TextureRect/MarginContainer/Back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="MarginContainer/Confirm_Panel/MarginContainer/HBoxContainer/Yes" to="." method="_on_return_to_main_menu"]
[connection signal="button_up" from="MarginContainer/Confirm_Panel/MarginContainer/HBoxContainer/No" to="." method="_on_no_button_up"]
